--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@PopCordDiscord" />
-    <meta name="twitter:url" content="https://site-fr.github.io/popcord" />
+    <meta name="twitter:url" content="https://popcord.github.io" />
     <meta name="twitter:description"
         content="Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server." />
     <meta name="twitter:image" content="https://www.zupimages.net/up/21/52/enov.png" />
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-    <meta property="og:url" content="https://site-fr.github.io/popcord">
+    <meta property="og:url" content="https://popcord.github.io">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="PopCord">
     <meta property="og:title" content="PopCord - Discord bot">
@@ -45,8 +45,8 @@
     <meta property="og:image" content="http://www.zupimages.net/up/21/52/enov.png">
     <meta property="og:image:secure_url" content="https://www.zupimages.net/up/21/52/enov.png" />
 
-    <meta property="og:keywords" content="PopCord, Popcord, popCord, Discord bot, Best Discord bot, vote, pop, cord, popcord, Pop, bot, Bot, POPCORD, BOT, Discord, https://site-fr.github.io/popcord/">
-    <meta name="keywords" content="PopCord, Popcord, popCord, Discord bot, Best Discord bot, vote, pop, cord, popcord, Pop, bot, Bot, POPCORD, BOT, Discord, https://site-fr.github.io/popcord/">
+    <meta property="og:keywords" content="PopCord, Popcord, popCord, Discord bot, Best Discord bot, vote, pop, cord, popcord, Pop, bot, Bot, POPCORD, BOT, Discord, https://popcord.github.io/">
+    <meta name="keywords" content="PopCord, Popcord, popCord, Discord bot, Best Discord bot, vote, pop, cord, popcord, Pop, bot, Bot, POPCORD, BOT, Discord, https://popcord.github.io/">
     <meta name="author" content="spidirman#4534">
     <meta name="copyright" content="spidirman#4534" />
 
