--- a/commands.html
+++ b/commands.html
@@ -24,7 +24,7 @@
     
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@PopCordDiscord" />
-    <meta name="twitter:url" content="https://site-fr.github.io/popcord/commands" />
+    <meta name="twitter:url" content="https://popcord.github.io/commands" />
     <meta name="twitter:description" content="The Commands list of the Discord Bot" />
     <meta name="twitter:image" content="https://www.zupimages.net/up/21/52/enov.png" />
 
@@ -32,7 +32,7 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-    <meta property="og:url" content="https://site-fr.github.io/popcord/commands">
+    <meta property="og:url" content="https://popcord.github.io/commands">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="PopCord">
     <meta property="og:title" content="PopCord - Commands">
@@ -84,7 +84,7 @@
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
                 <!-- ?Change the navbar-start to navbar-end if u want the links to be at right.-->
-                <a class="navbar-item" href="https://site-fr.github.io/popcord/">
+                <a class="navbar-item" href="https://popcord.github.io/">
                     Home
                 </a>
 
