--- a/privacy.html
+++ b/privacy.html
@@ -24,7 +24,7 @@
     
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@PopCordDiscord" />
-    <meta name="twitter:url" content="https://site-fr.github.io/popcord/privacy" />
+    <meta name="twitter:url" content="https://popcord.github.io/privacy" />
     <meta name="twitter:description" content="The Privacy policy the Discord Bot" />
     <meta name="twitter:image" content="https://www.zupimages.net/up/21/52/enov.png" />
 
@@ -32,7 +32,7 @@
 
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-    <meta property="og:url" content="https://site-fr.github.io/popcord/privacy">
+    <meta property="og:url" content="https://popcord.github.io/privacy">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="PopCord">
     <meta property="og:title" content="PopCord - Privacy policy">
@@ -78,7 +78,7 @@
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
                 <!-- ?Change the navbar-start to navbar-end if u want the links to be at right.-->
-                <a class="navbar-item" href="https://site-fr.github.io/popcord/">
+                <a class="navbar-item" href="https://popcord.github.io/">
                     Home
                 </a>
 
