--- a/404.html
+++ b/404.html
@@ -59,7 +59,7 @@
                     <!-- end Rabbit -->
                     <p>La page que vous recherchez a été déplacée, supprimée<br />
                         renommé ou n'a peut-être jamais existé.</p>
-                    <a href="https://site-fr.github.io/popcord/" class="btn">go to home</a>
+                    <a href="https://popcord.github.io/" class="btn">go to home</a>
                     <!--<a href="#" class="btn btn-brown">Contact Us</a>-->
                 </div>
                 <!-- end Info -->
