--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   ! Frameworks: Bulma, Solar Theme;
 -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="language" content="English">
-    <title>PopCord | Home</title>
+    <title>PopCord - Home</title>
     <link rel="stylesheet" href="dark.css">
     <link rel="icon" href="img/discord.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
