--- a/privacy.html
+++ b/privacy.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 
-<head>
+<head lang="en">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="language" content="English">
-    <title>PopCord | Privacy</title>
+    <title>PopCord - Privacy</title>
     <link rel="stylesheet" href="dark.css">
     <link rel="icon" href="img/discord.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
