--- a/commands.html
+++ b/commands.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="language" content="English">
-    <title>PopCord | Commands</title>
+    <title>PopCord - Commands</title>
     <link rel="stylesheet" href="dark.css">
     <link rel="icon" href="img/discord.png" type="image/x-icon">
     <link rel="stylesheet" href="./style.css">
