--- a/commands.html
+++ b/commands.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="language" content="English">
     <title>PopCord - Commands</title>
-    <link rel="stylesheet" href="dark.css">
+    <link rel="stylesheet" href="script/dark.css">
     <link rel="icon" href="img/discord.png" type="image/x-icon">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./script/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" />
 
@@ -21,7 +21,7 @@
     <meta name="robots" content="index,follow" />
     <meta name="googlebot" content="index,follow" />
     <meta name="googlebot-news" content="index,follow" />
-    
+
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@PopCordDiscord" />
     <meta name="twitter:url" content="https://popcord.github.io/commands" />
@@ -246,6 +246,6 @@
 
 
 </body>
-<script src="style.js"></script>
+<script src="script/style.js"></script>
 
 </html>
