--- a/privacy.html
+++ b/privacy.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="language" content="English">
     <title>PopCord - Privacy</title>
-    <link rel="stylesheet" href="dark.css">
+    <link rel="stylesheet" href="script/dark.css">
     <link rel="icon" href="img/discord.png" type="image/x-icon">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./script/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" />
 
@@ -21,7 +21,7 @@
     <meta name="robots" content="index,follow" />
     <meta name="googlebot" content="index,follow" />
     <meta name="googlebot-news" content="index,follow" />
-    
+
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@PopCordDiscord" />
     <meta name="twitter:url" content="https://popcord.github.io/privacy" />
@@ -149,7 +149,8 @@
                 <li><code>welcome_color</code> with value <code>hex:32dc32</code></li>
                 <li><code>welcome_icon</code> with value <code>member_icon</code></li>
                 <li><code>welcome_message</code> with values <code>member.name</code>, <code>guild.name</code>,
-                    <code>guild.member_count</code></li>
+                    <code>guild.member_count</code>
+                </li>
                 <br>
                 <p>No other information outside of the above mentioned one will be stored.</p>
             </ul>
@@ -217,7 +218,7 @@
                 </script>
             </div>
         </div>
-        <script src="style.js"></script>
+        <script src="script/style.js"></script>
 </body>
 
 </html>
