--- a/404.html
+++ b/404.html
@@ -1,15 +1,16 @@
-
-<html lang="fr"> <!--<![endif]-->
+<html lang="fr">
+<!--<![endif]-->
 
 <head>
     <meta charset="utf-8" />
     <title>404</title>
     <meta name="author" content="pkfrom" />
     <meta name="keywords" content="404 page, css3, template, html5 template" />
-    <meta name="description" content="404 - Page Template" />
+    <meta name="description" content="404" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!-- Libs CSS -->
-    <link type="text/css" media="all" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
+    <link type="text/css" media="all" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+        rel="stylesheet" />
     <link type="text/css" media="all" href="//pkfrom.github.io/404/assets/css/404.min.css" rel="stylesheet" />
 
     <!-- Favicons -->
@@ -19,9 +20,11 @@
     <link rel="apple-touch-icon" href="//pkfrom.github.io/404/assets/img/favicons/favicon57x57.png" />
     <link rel="shortcut icon" href="//pkfrom.github.io/404/assets/img/favicons/favicon.png" />
     <!-- Google Fonts -->
-    <link href='http://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700,800,900' rel='stylesheet'
+        type='text/css'>
 
 </head>
+
 <body>
 
     <!-- Load page -->
@@ -77,8 +80,10 @@
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
     <script src="//pkfrom.github.io/404/assets/js/modernizr.custom.js" type="text/javascript"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.6.0/jquery.nicescroll.min.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.6.0/jquery.nicescroll.min.js"
+        type="text/javascript"></script>
     <script src="//pkfrom.github.io/404/assets/js/404.min.js" type="text/javascript"></script>
 
 </body>
+
 </html>
