--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="language" content="English">
     <title>PopCord - Home</title>
-    <link rel="stylesheet" href="dark.css">
+    <link rel="stylesheet" href="script/dark.css">
     <link rel="icon" href="img/discord.png" type="image/x-icon">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./script/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css" />
     <link rel="canonical" href="https://popcord.github.io/" />
@@ -22,7 +22,8 @@
     <meta name="theme-color" content="#ff97ff">
     <!--Light Blue default Its the embed color-->
     <meta name="title" content="PopCord - Discord bot">
-    <meta name="description" content="Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server." >
+    <meta name="description"
+        content="Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server.">
     <meta name="googlebot" content="index,follow" />
     <meta name="googlebot-news" content="index,follow" />
     <meta name="robots" content="index,follow" />
@@ -41,12 +42,15 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="PopCord">
     <meta property="og:title" content="PopCord - Discord bot">
-    <meta property="og:description" content="Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server.">
+    <meta property="og:description"
+        content="Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server.">
     <meta property="og:image" content="http://www.zupimages.net/up/21/52/enov.png">
     <meta property="og:image:secure_url" content="https://www.zupimages.net/up/21/52/enov.png" />
 
-    <meta property="og:keywords" content="PopCord, Popcord, popCord, Discord bot, Best Discord bot, vote, pop, cord, popcord, Pop, bot, Bot, POPCORD, BOT, Discord, https://popcord.github.io/">
-    <meta name="keywords" content="PopCord, Popcord, popCord, Discord bot, Best Discord bot, vote, pop, cord, popcord, Pop, bot, Bot, POPCORD, BOT, Discord, https://popcord.github.io/">
+    <meta property="og:keywords"
+        content="PopCord, Popcord, popCord, Discord bot, Best Discord bot, vote, pop, cord, popcord, Pop, bot, Bot, POPCORD, BOT, Discord, https://popcord.github.io/">
+    <meta name="keywords"
+        content="PopCord, Popcord, popCord, Discord bot, Best Discord bot, vote, pop, cord, popcord, Pop, bot, Bot, POPCORD, BOT, Discord, https://popcord.github.io/">
     <meta name="author" content="spidirman#4534">
     <meta name="copyright" content="spidirman#4534" />
 
@@ -209,7 +213,7 @@
 
             </script>
         </div>
-        <script src="style.js"></script>
+        <script src="script/style.js"></script>
     </div>
 </body>
 
