--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item"
-                href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join">
+                href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join" target="_blank">
                 <img src="img/discord.png" width="30px" height="55px">
             </a>
 
@@ -91,7 +91,11 @@
                 <a class="navbar-item" href="https://discord.com/invite/U3u5EyrgTD" target="_blank">
                     Support
                 </a>
-
+              
+                <a class="navbar-item" href="discord" target="_blank">
+                    ChatBox
+                </a>
+              
                 <div class="navbar-item has-dropdown is-hoverable">
                     <a class="navbar-link">
                         Vote
@@ -195,7 +199,7 @@
             <h1><b>What are you waiting for?</b></h1>
             <p>take your chance for a better world!</p>
             <a role="button"
-                href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join"
+                href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join" target="_blank" 
                 class="button button-custom is-secondary is-large"> Invite</a>
         </div>
     </center>
