--- a/commands.html
+++ b/commands.html
@@ -96,6 +96,11 @@
                     <a class="navbar-link">
                         Vote
                     </a>
+                    
+                <a class="navbar-item" href="discord" target="_blank">
+                    ChatBox
+                </a>
+                    
                     <!--Dropdown menu for vote-->
                     <div class="navbar-dropdown">
                         <a class="navbar-item" href="https://top.gg/bot/994970912271122452" target="_blank">
