--- a/commands.html
+++ b/commands.html
@@ -97,7 +97,7 @@
                         Vote
                     </a>
                     
-                <a class="navbar-item" href="discord" target="_blank">
+                <a class="navbar-item" href="discord">
                     ChatBox
                 </a>
                     
