--- a/privacy.html
+++ b/privacy.html
@@ -89,7 +89,7 @@
                     Support
                 </a>
                 
-                <a class="navbar-item" href="discord" target="_blank">
+                <a class="navbar-item" href="discord">
                     ChatBox
                 </a>
                 
