--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <a class="navbar-item" href="commands">
                     Commands
                 </a>
-                <a class="navbar-item" href="https://discord.com/invite/U3u5EyrgTD" target="_blank">
+                <a class="navbar-item" href="https://discord.com/invite/U3u5EyrgTD">
                     Support
                 </a>
               
