--- a/discord.html
+++ b/discord.html
@@ -81,7 +81,9 @@
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
                 <!-- ?Change the navbar-start to navbar-end if u want the links to be at right.-->
-
+                <a class="navbar-item" href="https://popcord.github.io/">
+                    Home
+                </a>
                 <a class="navbar-item" href="commands">
                     Commands
                 </a>
