--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item"
-                href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join" target="_blank">
+                href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join"
+                target="_blank">
                 <img src="img/discord.png" width="30px" height="55px">
             </a>
 
@@ -91,11 +92,11 @@
                 <a class="navbar-item" href="https://discord.com/invite/U3u5EyrgTD">
                     Support
                 </a>
-              
+
                 <a class="navbar-item" href="discord" target="_blank">
                     ChatBox
                 </a>
-              
+
                 <div class="navbar-item has-dropdown is-hoverable">
                     <a class="navbar-link">
                         Vote
@@ -199,8 +200,8 @@
             <h1><b>What are you waiting for?</b></h1>
             <p>take your chance for a better world!</p>
             <a role="button"
-                href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join" target="_blank" 
-                class="button button-custom is-secondary is-large"> Invite</a>
+                href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join"
+                target="_blank" class="button button-custom is-secondary is-large"> Invite</a>
         </div>
     </center>
     <br>
@@ -219,6 +220,13 @@
         </div>
         <script src="script/style.js"></script>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
+        new Crate({
+            server: '911936163395301379',
+            channel: '911936164095729680',
+            glyph: ['https://c.tenor.com/aDOTKsaCjVMAAAAM/furry-discord.gif', '100%']
+        })
+    </script>
 </body>
 
 </html>
