--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="language" content="English">
-    <title>PopCord - Home</title>
+    <title>PopCord - The Discord Bot</title>
     <link rel="stylesheet" href="script/dark.css">
     <link rel="icon" href="img/discord.png" type="image/x-icon">
     <link rel="stylesheet" href="./script/style.css">
@@ -21,7 +21,7 @@
     <!--websites embed-->
     <meta name="theme-color" content="#ff97ff">
     <!--Light Blue default Its the embed color-->
-    <meta name="title" content="PopCord - Discord bot">
+    <meta name="title" content="PopCord - The Discord Bot">
     <meta name="description"
         content="Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server.">
     <meta name="googlebot" content="index,follow" />
@@ -40,8 +40,8 @@
 
     <meta property="og:url" content="https://popcord.github.io">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="PopCord">
-    <meta property="og:title" content="PopCord - Discord bot">
+    <meta property="og:site_name" content="popcord">
+    <meta property="og:title" content="PopCord - The Discord Bot">
     <meta property="og:description"
         content="Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server.">
     <meta property="og:image" content="http://www.zupimages.net/up/21/52/enov.png">
