--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="language" content="English">
-    <title>PopCord - The Discord Bot</title>
+    <title>PopCord - Home</title>
     <link rel="stylesheet" href="script/dark.css">
     <link rel="icon" href="img/discord.png" type="image/x-icon">
     <link rel="stylesheet" href="./script/style.css">
+    <script src="script/style.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://discordwasmyidea.github.io/Discord-bot-website-template/main.js"></script>
     <link rel="canonical" href="https://popcord.github.io/" />
 
 
     <!--websites embed-->
     <meta name="theme-color" content="#ff97ff">
     <!--Light Blue default Its the embed color-->
-    <meta name="title" content="PopCord - The Discord Bot">
+    <meta name="title" content="PopCord - Discord bot">
     <meta name="description"
         content="Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server.">
     <meta name="googlebot" content="index,follow" />
@@ -40,8 +43,8 @@
 
     <meta property="og:url" content="https://popcord.github.io">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="popcord">
-    <meta property="og:title" content="PopCord - The Discord Bot">
+    <meta property="og:site_name" content="PopCord">
+    <meta property="og:title" content="PopCord - Discord bot">
     <meta property="og:description"
         content="Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server.">
     <meta property="og:image" content="http://www.zupimages.net/up/21/52/enov.png">
@@ -62,11 +65,17 @@
 </style>
 
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
+        new Crate({
+            server: '911936163395301379',
+            channel: '911936164095729680',
+            glyph: ['https://c.tenor.com/aDOTKsaCjVMAAAAM/furry-discord.gif', '100%']
+        })
+    </script>
     <nav class="navbar" role="navigation" aria-label="main navigation">
         <div class="navbar-brand">
             <a class="navbar-item"
-                href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join"
-                target="_blank">
+                href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join">
                 <img src="img/discord.png" width="30px" height="55px">
             </a>
 
@@ -85,18 +94,16 @@
         <div id="navbarBasicExample" class="navbar-menu">
             <div class="navbar-start">
                 <!-- ?Change the navbar-start to navbar-end if u want the links to be at right.-->
-
+                <div class="navbar-item"><a onclick="myFunction()" id="mode" class="fa-solid fa-moon"></a></div>
                 <a class="navbar-item" href="commands">
                     Commands
                 </a>
-                <a class="navbar-item" href="https://discord.com/invite/U3u5EyrgTD">
+                <a class="navbar-item" href="https://discord.com/invite/U3u5EyrgTD" target="_blank">
                     Support
                 </a>
-
                 <a class="navbar-item" href="discord" target="_blank">
                     ChatBox
                 </a>
-
                 <div class="navbar-item has-dropdown is-hoverable">
                     <a class="navbar-link">
                         Vote
@@ -128,6 +135,52 @@
     <div>
         <div class="title">
             <p class="header-ub"><b>PopCord</b></p>
+
+            <script>
+
+                function myFunction() {
+                    const bgc = document.getElementById("bg").style.backgroundColor;
+                    const bgcf = document.getElementById("bg").style.fill;
+                    const mode = document.getElementById("mode").style.fill;
+                    if (bgc == 'rgb(40, 123, 201)') {
+                        document.getElementById("bg").style.backgroundColor = "rgb(44, 44, 44)";
+                        document.getElementById("bgf").style.fill = "rgb(44, 44, 44)";
+                        document.getElementById("mode").className = "fa-solid fa-moon";
+                        console.log("ok black")
+                    }
+                    else {
+                        document.getElementById("bg").style.backgroundColor = "rgb(40, 123, 201)";
+                        document.getElementById("bgf").style.fill = "rgb(40, 123, 201)";
+                        console.log("ok blue")
+                        document.getElementById("mode").className = "fa-solid fa-sun";
+                    }
+
+                };
+                const p = {
+                    help() {
+                        console.log("p.help() : this \np.clear() : clear console\np.support(): open support server link\n\nmade by spidirman#4534");
+                    },
+                    support() {
+                        window.open("https://discord.com/invite/U3u5EyrgTD")
+                        console.log("server support oppened");
+                    },
+                    clear() {
+                        clear()
+                        console.log("console cleared");
+                        fff()
+                    },
+                };
+
+
+
+                fff()
+                function fff() {
+                    var wait = 'color:#7289da; font-size: 100px; font-weight: bold; -webkit-text-stroke: 3px black;'
+                    var data = 'color:red; font-size: 20px; font-weight: bold;'
+                    console.log("%cWait !", wait);
+                    console.log("%cyou can write p.help() in the console for custom commands!", data)
+                };
+            </script>
         </div>
         <div class="desc">
             <h6>ultimate multifunction bot</h6>
@@ -138,95 +191,195 @@
                     class="fab fa-fw fa-fw fa-discord"></i> Add Bot!</a>
         </div>
     </div>
-
-    <div class="container2">
+    <div id="bg" class="container2">
         <div class="divider12"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
                 <path fill="#002b36" fill-opacity="1"
                     d="M0,96L60,80C120,64,240,32,360,53.3C480,75,600,149,720,160C840,171,960,117,1080,117.3C1200,117,1320,171,1380,197.3L1440,224L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
                 </path>
-            </svg></div>
+            </svg>
+        </div>
+
+
         <div class="why-us is-large is-white">
             <h1>Features</h1>
         </div>
         <div class="columns">
-            <div class="column">
-                <div class="card-custom">
-                    <i class="fas fa-rocket fa-7x icons123"></i><br>
-                    <h3 class="textcustom"><b>UPTIME</b></h3>
-                    <p class="text">A lightning-fast bot available to you when you need it! (or just lost your way 😅)
-                    </p>
-                </div>
+            <div class="feature feature1">
+                <i class="fas fa-rocket"></i>
+                <h4>UPTIME</h4>
+                <p>A lightning-fast bot available to you when you need it! (or just lost your way 😅)</p>
+
             </div>
-            <div class="column">
-                <div class="card-custom">
-                    <i class="fas fa-question-circle fa-7x icons123"></i><br>
-                    <h3 class="textcustom"><b>SUPPORT</b></h3>
-                    <p class="text">Active support to answer your questions and help you with the bot</p>
-                </div>
+            <div class="feature feature2">
+                <i class="fas fa-question-circle"></i>
+                <h4>SUPPORT</h4>
+                <p>Active support to answer your questions and help you with the bot</p>
+
             </div>
-            <div class="column">
-                <div class="card-custom">
-                    <i class="fas fa-gift fa-7x icons123"></i><br>
-                    <h3 class="textcustom"><b>UPDATES</b></h3>
-                    <p class="text">a bot updated frequently for maximum fluidity in your server!</p>
-                </div>
+            <div class="feature feature3">
+                <i class="fas fa-upload"></i>
+                <h4>feature 2</h4>
+                <p>a bot frequently updated for maximum fluidity in your server!</p>
             </div>
-            <div class="column">
-                <div class="card-custom">
-                    <i class="fas fa-cogs fa-7x icons123"></i><br>
-                    <h3 class="textcustom"><b>INTELLIGENCE</b></h3>
-                    <p class="text">an intelligent bot that will meet your requirements!</p>
-                </div>
-            </div>
+
         </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
 
+        <div class="faq">
+
+            <div class="wrapper reveal">
+                <main id="questions" role="main">
+                    <div class="title">
+                        <div class="th1">
+                            <h1>Frequently Asked Questions</h1>
+                        </div>
+                        <center>
+                            <div class="thr">
+                                <hr>
+                            </div>
+                        </center>
+                    </div>
+                    <input type="text" class="live-search-box" placeholder="Search an Answer..." />
+                    <!-- question start -->
+                    <div class="topic">
+                        <div class="open">
+
+                            <h2 class="question">1. What Is The Prefix For the Bot?</h2>
+                            <span class="faq-t"></span>
+                        </div>
+                        <p class="answer"> The Prefix For the Bot Is <code>p!</code></p>
+                    </div>
+                    <!-- question end -->
+                    <!-- question start -->
+                    <div class="topic">
+                        <div class="open">
+                            <h2 class="question">2. This Bot Respect The Discord TOS?
+                            </h2><span class="faq-t"></span>
+                        </div>
+                        <p class="answer"> Yes, The Bot Respect The Discord TOS</p>
+                    </div>
+                    <!-- question end -->
+                    <!-- question start -->
+                    <div class="topic">
+                        <div class="open">
+                            <h2 class="question">3. Why Have You Named The Bot PopCord
+                            </h2><span class="faq-t"></span>
+                        </div>
+                        <p class="answer"> Beacause Have dont Have A Big Ideas Lol</p>
+                    </div>
+                    <!-- question end -->
+                    <!-- question start -->
+                    <div class="topic">
+                        <div class="open">
+                            <h2 class="question">4. How Much Are You On The Project?
+                            </h2><span class="faq-t"></span>
+                        </div>
+                        <p class="answer"> It's Only Me, I Manage Everything Myself</p>
+                    </div>
+                    <!-- question end -->
+                    <!-- question start -->
+                    <div class="topic">
+                        <div class="open">
+                            <h2 class="question">5. Are You Making Money From This?
+                            </h2><span class="faq-t"></span>
+                        </div>
+                        <p class="answer"> Yeah! Lots Of Money: 0.00€</p>
+                    </div>
+                    <!-- question end -->
+                    <!-- question start -->
+                    <div class="topic">
+                        <div class="open">
+                            <h2 class="question">6. How Can I Report A Bug?
+                            </h2><span class="faq-t"></span>
+                        </div>
+                        <p class="answer"> Just Join The Support Server And Tell Me The Bug(s)/p>
+                    </div>
+                    <!-- question end -->
+                    <!-- question start -->
+                    <div class="topic">
+                        <div class="open">
+                            <h2 class="question">7. How Do You Use Our Data?
+                            </h2><span class="faq-t"></span>
+                        </div>
+                        <p class="answer"> You can get more information on this page: <a
+                                href="https://popcord.github.io/privacy">popcord.github.io/privacy</a></p>
+                    </div>
+                    <!-- question end -->
+                    <!-- question start -->
+                    <div class="topic">
+                        <div class="open">
+                            <h2 class="question">8. Does PopCord Speak A Language Other Than English?
+                            </h2><span class="faq-t"></span>
+                        </div>
+                        <p class="answer"> Not For Now Sorry</p>
+                    </div>
+                    <!-- question end -->
+                    <!-- question start -->
+                    <div class="topic">
+                        <div class="open">
+                            <h2 class="question">9. 404
+                            </h2><span class="faq-t"></span>
+                        </div>
+                        <p class="answer"> not found</p>
+                    </div>
+                    <!-- question end -->
+                </main>
+            </div>
+
+        </div>
+
+        <br>
+        <br>
     </div>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-        <path fill="#287bc9" fill-opacity="1"
-            d="M0,128L48,128C96,128,192,128,288,160C384,192,480,256,576,272C672,288,768,256,864,218.7C960,181,1056,139,1152,138.7C1248,139,1344,181,1392,202.7L1440,224L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
-        </path>
-    </svg>
+    <div class="divider12"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path id="bgf" fill="rgb(44, 44, 44)" fill-opacity="1"
+                d="M0,96L60,80C120,64,240,32,360,53.3C480,75,600,149,720,160C840,171,960,117,1080,117.3C1200,117,1320,171,1380,197.3L1440,224L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z">
+            </path>
+        </svg></div>
 
 
-    <br><br><br><br><br><br>
     <center>
-        <div class="why-wait">
-            <h1><b>What are you waiting for?</b></h1>
-            <p>take your chance for a better world!</p>
-            <a role="button"
-                href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join"
-                target="_blank" class="button button-custom is-secondary is-large"> Invite</a>
+        <div class="wrapper reveal">
+            <div class="why-wait">
+                <h1><b>What are you waiting for?</b></h1>
+                <p>take your chance for a better world!</p>
+                <a role="button"
+                    href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join"
+                    class="button button-custom is-secondary is-large"> Invite</a>
+            </div>
         </div>
     </center>
+
+
+
+
+
     <br>
     <br><br><br>
 
+    <div style="display:flex" class="divider12">
+        <svg xmlns=" http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#073642" fill-opacity="1"
+                d="M0,192L48,176C96,160,192,128,288,133.3C384,139,480,181,576,202.7C672,224,768,224,864,224C960,224,1056,224,1152,234.7C1248,245,1344,267,1392,277.3L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
+            </path>
+        </svg>
+    </div>
     <div class="footer">
+
         <div class="copyright" align="center">
             <script>
                 document.write('&copy;');
                 document.write(' 2021 - ');
                 document.write(new Date().getFullYear());
                 document.write(' PopCord - Not affilated with Discord, Inc.');
-                document.write('<br><br>Made with ❤️ By spidirman#4534 !') //You can remove this line. But credit is appreciated! Dont credit yourself!
+                document.write('<br><br>Made with ❤️ By spidirman#4534 !')
 
             </script>
+
         </div>
-        <script src="script/style.js"></script>
+
+
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
-        new Crate({
-            server: '911936163395301379',
-            channel: '911936164095729680',
-            glyph: ['https://c.tenor.com/aDOTKsaCjVMAAAAM/furry-discord.gif', '100%']
-        })
-    </script>
+
 </body>
 
 </html>
