--- a/index.html
+++ b/index.html
@@ -174,23 +174,11 @@
         </div>
 
         <div id="navbarBasicExample" class="navbar-menu">
-            <div class="navbar-start">
-                <!-- ?Change the navbar-start to navbar-end if u want the links to be at right.-->
-                <div class="navbar-item"></div>
-                <a class="navbar-item" href="commands">
-                    Commands
-                </a>
-                <a class="navbar-item" href="https://discord.com/invite/U3u5EyrgTD" target="_blank">
-                    Support
-                </a>
-                <a class="navbar-item" href="discord" target="_blank">
-                    ChatBox
-                </a>
+            <div class="navbar-end">
                 <div class="navbar-item has-dropdown is-hoverable">
                     <a class="navbar-link">
                         Vote
                     </a>
-                    <!--Dropdown menu for vote-->
                     <div id="navbar-menu" style="background-color:rgb(33, 62, 104)" class="navbar-dropdown">
                         <a class="navbar-item" href="https://top.gg/bot/994970912271122452" target="_blank">
                             Top.gg
@@ -207,6 +195,17 @@
                     </div>
 
                 </div>
+                <div class="navbar-item"></div>
+                <a class="navbar-item" href="commands">
+                    Commands
+                </a>
+                <a class="navbar-item" href="https://discord.com/invite/U3u5EyrgTD" target="_blank">
+                    Support
+                </a>
+                <a class="navbar-item" href="discord" target="_blank">
+                    ChatBox
+                </a>
+
 
             </div>
 
