--- a/commands.html
+++ b/commands.html
@@ -202,12 +202,14 @@
 
                 </div>
                 <div class="navbar-item"></div>
-                <a class="navbar-item" href="commands">
-                    Commands
+                <a class="navbar-item" href="https://popcord.github.io/">
+                    Home
                 </a>
+
                 <a class="navbar-item" href="https://discord.com/invite/U3u5EyrgTD" target="_blank">
                     Support
                 </a>
+
                 <a class="navbar-item" href="discord" target="_blank">
                     ChatBox
                 </a>
