--- a/privacy.html
+++ b/privacy.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="img/discord.png" type="image/x-icon">
     <link rel="stylesheet" href="./script/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" />
 
 
