--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="language" content="English">
-    <title>PopCord - Home</title>
+    <title>PopCord</title>
     <link rel="stylesheet" href="script/dark.css">
     <link rel="icon" href="img/discord.png" type="image/x-icon">
     <link rel="stylesheet" href="./script/style.css">
@@ -25,7 +25,7 @@
     <!--websites embed-->
     <meta name="theme-color" content="#ff97ff">
     <!--Light Blue default Its the embed color-->
-    <meta name="title" content="PopCord - Discord bot">
+    <meta name="title" content="PopCord - The Discord bot">
     <meta name="description"
         content="Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server.">
     <meta name="googlebot" content="index,follow" />
@@ -51,10 +51,21 @@
     <meta property="og:image" content="http://www.zupimages.net/up/21/52/enov.png">
     <meta property="og:image:secure_url" content="https://www.zupimages.net/up/21/52/enov.png" />
 
+    <meta name=apple-mobile-web-app-capable content=yes>
+    <meta name=apple-mobile-web-app-status-bar-style content=black-translucent>
+    <meta name=apple-mobile-web-app-title content=PopCord>
+    <meta name=mobile-web-app-capable content=yes>
+    <meta name=application-name content=PopCord>
+  
+  
+  
+  
     <meta property="og:keywords"
         content="PopCord, Popcord, popCord, Discord bot, Best Discord bot, vote, pop, cord, popcord, Pop, bot, Bot, POPCORD, BOT, Discord, https://popcord.github.io/">
     <meta name="keywords"
         content="PopCord, Popcord, popCord, Discord bot, Best Discord bot, vote, pop, cord, popcord, Pop, bot, Bot, POPCORD, BOT, Discord, https://popcord.github.io/">
+    
+  
     <meta name="author" content="spidirman#4534">
     <meta name="copyright" content="spidirman#4534" />
 
