--- a/commands.html
+++ b/commands.html
@@ -24,6 +24,7 @@
     <meta name="googlebot-news" content="index,follow" />
 
     <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="PopCord - The Discord Bot" />
     <meta name="twitter:site" content="@PopCordDiscord" />
     <meta name="twitter:url" content="https://popcord.github.io/commands" />
     <meta name="twitter:description" content="The Commands list of the Discord Bot" />
@@ -41,6 +42,13 @@
     <meta property="og:image" content="http://www.zupimages.net/up/21/52/enov.png">
     <meta property="og:image:secure_url" content="https://www.zupimages.net/up/21/52/enov.png">
 
+    <meta name=apple-mobile-web-app-capable content=yes>
+    <meta name=apple-mobile-web-app-status-bar-style content=black-translucent>
+    <meta name=apple-mobile-web-app-title content=PopCord>
+    <meta name=mobile-web-app-capable content=yes>
+    <meta name=application-name content=PopCord>
+    
+    
     <meta property="og:keywords"
         content="PopCord, Popcord, popCord, Discord bot, Best Discord bot, vote, pop, cord, popcord, Pop, bot, Bot, POPCORD, BOT, Discord, https://site-fr.github.io/popcord/">
     <meta name="keywords"
