--- a/index.html
+++ b/index.html
@@ -1,31 +1,25 @@
-<!-- ! THIS LINE SHALL BE INCLUDED IN EVERY SUBSTANTIAL COPY OF THIS WEBSITE.
-  ! MADE BY FURY#6717
-  ! Frameworks: Bulma, Solar Theme;
--->
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="language" content="English">
-    <title>PopCord - The Discord Bot</title>
+    <title>PopCord - Home</title>
     <link rel="stylesheet" href="script/dark.css">
     <link rel="icon" href="img/discord.png" type="image/x-icon">
     <link rel="stylesheet" href="./script/style.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="script/style.js"></script>
-  
-  
+    <script src="./script/style.js"></script>
     <link rel="canonical" href="https://popcord.github.io/" />
 
 
     <!--websites embed-->
     <meta name="theme-color" content="#ff97ff">
-    <!--Light Blue default Its the embed color-->
-    <meta name="title" content="PopCord - The Discord Bot">
+    <meta name="title" content="PopCord - Discord bot">
     <meta name="description"
         content="Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server.">
     <meta name="googlebot" content="index,follow" />
@@ -34,7 +28,6 @@
     <meta name="google-site-verification" content="McyKAGBwPu0aBcFdD27X-YK8FhLRrmgJlLVbJxnP6XI" />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="PopCord - The Discord Bot" />
     <meta name="twitter:site" content="@PopCordDiscord" />
     <meta name="twitter:url" content="https://popcord.github.io" />
     <meta name="twitter:description"
@@ -46,119 +39,24 @@
     <meta property="og:url" content="https://popcord.github.io">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="PopCord">
-    <meta property="og:title" content="PopCord - The Discord bot">
+    <meta property="og:title" content="PopCord - Discord bot">
     <meta property="og:description"
         content="Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server.">
     <meta property="og:image" content="http://www.zupimages.net/up/21/52/enov.png">
     <meta property="og:image:secure_url" content="https://www.zupimages.net/up/21/52/enov.png" />
 
-    <meta name=apple-mobile-web-app-capable content=yes>
-    <meta name=apple-mobile-web-app-status-bar-style content=black-translucent>
-    <meta name=apple-mobile-web-app-title content=PopCord>
-    <meta name=mobile-web-app-capable content=yes>
-    <meta name=application-name content=PopCord>
-  
-  
-  
-  
     <meta property="og:keywords"
         content="PopCord, Popcord, popCord, Discord bot, Best Discord bot, vote, pop, cord, popcord, Pop, bot, Bot, POPCORD, BOT, Discord, https://popcord.github.io/">
     <meta name="keywords"
         content="PopCord, Popcord, popCord, Discord bot, Best Discord bot, vote, pop, cord, popcord, Pop, bot, Bot, POPCORD, BOT, Discord, https://popcord.github.io/">
-    
-  
     <meta name="author" content="spidirman#4534">
     <meta name="copyright" content="spidirman#4534" />
+    <style>
+        body {}
 
-
-
-    <script>
-
-        const p = {
-            help() {
-                console.log("p.help() : this \np.clear() : clear console\np.support(): open support server link\n\nmade by spidirman#4534");
-            },
-            support() {
-                window.open("https://discord.com/invite/U3u5EyrgTD")
-                console.log("server support oppened");
-            },
-            clear() {
-                clear()
-                console.log("console cleared");
-                fff()
-            },
-        };
-
-        fff()
-        function fff() {
-            var wait = 'color:#7289da; font-size: 100px; font-weight: bold; -webkit-text-stroke: 3px black;'
-            var data = 'color:red; font-size: 20px; font-weight: bold;'
-            console.log("%cWait !", wait);
-            console.log("%cyou can write p.help() in the console for custom commands!", data)
-        };
-
-
-
-        function myFunction() {
-            const bgc = document.getElementById("formehaut").style.backgroundColor;
-
-            if (bgc == 'rgb(40, 123, 201)') {
-
-                document.getElementById("colormode").className = "fa-solid fa-moon";
-                document.getElementById("colormode").textContent = " dark";
-                document.getElementById("colormode").style.color = "rgb(35, 88, 104)";
-
-                document.getElementById("body").style.backgroundColor = "rgb(23, 22, 22)";
-
-                document.getElementById("formehaut2").style.fill = "rgb(23, 22, 22)";
-                document.getElementById("formehaut").style.backgroundColor = "rgb(31, 38, 49)";
-
-                document.getElementById("navbar").style.backgroundColor = "rgb(44, 44, 44)";
-                document.getElementById("navbar-menu").style.backgroundColor = "rgb(44, 44, 44)";
-
-                document.getElementById("formebas").style.fill = "rgb(31, 38, 49)";
-
-                document.getElementById("formefooter").style.fill = "rgb(31, 38, 49)";
-                document.getElementById("footer").style.backgroundColor = "rgb(31, 38, 49)";
-
-                console.log("darkmode")
-            }
-            else {
-                document.getElementById("colormode").className = "fa-solid fa-sun";
-                document.getElementById("colormode").textContent = " light";
-                document.getElementById("colormode").style.color = "rgb(189, 195, 80)";
-
-                document.getElementById("body").style.backgroundColor = "rgb(0, 43, 54)";
-
-                document.getElementById("formehaut2").style.fill = "rgb(0, 43, 54)";
-                document.getElementById("formehaut").style.backgroundColor = "rgb(40, 123, 201)";
-
-
-                document.getElementById("navbar").style.backgroundColor = "rgb(7, 54, 66)";
-                document.getElementById("navbar-menu").style.backgroundColor = "rgb(7, 54, 66)";
-
-                document.getElementById("formebas").style.fill = "rgb(40, 123, 201)";
-
-                document.getElementById("formefooter").style.fill = "rgb(7, 54, 66)";
-                document.getElementById("footer").style.backgroundColor = "rgb(7, 54, 66)";
-
-                console.log("lightmode")
-
-            }
-
-        };
-
-
-
-
-
-    </script>
+        body.dark {}
+    </style>
 </head>
-<style>
-    body {
-        font-family: 'Roboto', sans-serif;
-    }
-</style>
 
 <body id="body" style="background-color:rgb(0, 43, 54)">
     <script src="https://cdn.jsdelivr.net/npm/@widgetbot/crate@3" async defer>
@@ -175,8 +73,8 @@
                 href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join">
                 <img src="img/discord.png" width="30px" height="55px">
             </a>
-            <p class="navbar-item"><a onclick="myFunction()" id="colormode" style="color:rgb(189, 195, 80)"
-                    class="fa-solid fa-sun"> light</a></p>
+            <p class="navbar-item"><a id="colormode" style="color:rgb(189, 195, 80)" class="fa-solid fa-sun"> light</a>
+            </p>
             <a role="button" class="navbar-burger" data-target="navbarBasicExample" aria-label="menu"
                 aria-expanded="false">
                 <span aria-hidden="true"></span>
@@ -433,5 +331,96 @@
     </div>
 
 </body>
+
+</html>
+<script>
+    const p = {
+        help() {
+            console.log("p.help() : this \np.clear() : clear console\np.support(): open support server link\n\nmade by spidirman#4534");
+        },
+        support() {
+            window.open("https://discord.com/invite/U3u5EyrgTD")
+            console.log("server support oppened");
+        },
+        clear() {
+            clear()
+            console.log("console cleared");
+            fff()
+        },
+    };
+
+    fff()
+    function fff() {
+        var wait = 'color:#7289da; font-size: 100px; font-weight: bold; -webkit-text-stroke: 3px black;'
+        var data = 'color:red; font-size: 20px; font-weight: bold;'
+        console.log("%cWait !", wait);
+        console.log("%cyou can write p.help() in the console for custom commands!", data)
+    };
+
+    const body = document.getElementById('body');
+    const button = document.getElementById('colormode');
+
+    function light() {
+        body.classList.remove('dark');
+        localStorage.setItem("theme", "light");
+        document.getElementById("colormode").className = "fa-solid fa-sun";
+        document.getElementById("colormode").textContent = " light";
+        document.getElementById("colormode").style.color = "rgb(189, 195, 80)";
+
+        document.getElementById("body").style.backgroundColor = "rgb(0, 43, 54)";
+
+        document.getElementById("formehaut2").style.fill = "rgb(0, 43, 54)";
+        document.getElementById("formehaut").style.backgroundColor = "rgb(40, 123, 201)";
+
+
+        document.getElementById("navbar").style.backgroundColor = "rgb(7, 54, 66)";
+        document.getElementById("navbar-menu").style.backgroundColor = "rgb(7, 54, 66)";
+
+        document.getElementById("formebas").style.fill = "rgb(40, 123, 201)";
+
+        document.getElementById("formefooter").style.fill = "rgb(7, 54, 66)";
+        document.getElementById("footer").style.backgroundColor = "rgb(7, 54, 66)";
+
+        console.log("lightmode")
+    }
+    
+    function dark() {
+        body.classList.add('dark');
+        localStorage.setItem("theme", "dark");
+        document.getElementById("colormode").className = "fa-solid fa-moon";
+        document.getElementById("colormode").textContent = " dark";
+        document.getElementById("colormode").style.color = "rgb(35, 88, 104)";
+
+        document.getElementById("body").style.backgroundColor = "rgb(23, 22, 22)";
+
+        document.getElementById("formehaut2").style.fill = "rgb(23, 22, 22)";
+        document.getElementById("formehaut").style.backgroundColor = "rgb(31, 38, 49)";
+
+        document.getElementById("navbar").style.backgroundColor = "rgb(44, 44, 44)";
+        document.getElementById("navbar-menu").style.backgroundColor = "rgb(44, 44, 44)";
+
+        document.getElementById("formebas").style.fill = "rgb(31, 38, 49)";
+
+        document.getElementById("formefooter").style.fill = "rgb(31, 38, 49)";
+        document.getElementById("footer").style.backgroundColor = "rgb(31, 38, 49)";
+
+        console.log("darkmode")
+    }
+
+
+    function toggleDark() {
+        if (body.classList.contains('dark')) {
+            light()
+        } else {
+            dark()
+        }
+    }
+
+    if (localStorage.getItem("theme") === "dark") {
+        dark()
+    }
+
+    button.addEventListener('click', toggleDark);
+</script>
 
 </html>
