--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="language" content="English">
-    <title>PopCord - Home</title>
+    <title>PopCord - The Discord bot</title>
     <link rel="stylesheet" href="script/dark.css">
     <link rel="icon" href="img/discord.png" type="image/x-icon">
     <link rel="stylesheet" href="./script/style.css">
@@ -19,7 +19,7 @@
 
     <!--websites embed-->
     <meta name="theme-color" content="#ff97ff">
-    <meta name="title" content="PopCord - Discord bot">
+    <meta name="title" content="PopCord - The Discord bot">
     <meta name="description"
         content="Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server.">
     <meta name="googlebot" content="index,follow" />
@@ -29,6 +29,7 @@
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@PopCordDiscord" />
+    <meta name="twitter:title" content="PopCord - The Discord bot"/>
     <meta name="twitter:url" content="https://popcord.github.io" />
     <meta name="twitter:description"
         content="Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server." />
@@ -39,7 +40,7 @@
     <meta property="og:url" content="https://popcord.github.io">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="PopCord">
-    <meta property="og:title" content="PopCord - Discord bot">
+    <meta property="og:title" content="PopCord - The Discord bot">
     <meta property="og:description"
         content="Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server.">
     <meta property="og:image" content="http://www.zupimages.net/up/21/52/enov.png">
@@ -129,11 +130,11 @@
     </nav>
     <div>
         <div class="title">
-            <p class="header-ub"><b>PopCord</b></p>
+            <p class="header-ub"><b>PopCord - The Discord bot</b></p>
 
         </div>
         <div class="desc">
-            <h6>ultimate multifunction bot</h6>
+            <h6>Install our Discord bot named PopCord to set up leveling, moderation, fun,  utils,  social, and NSFW for your Discord server.</h6>
         </div>
         <div class="button-section">
             <a href="https://discord.com/oauth2/authorize?client_id=994970912271122452&permissions=1644971949567&redirect_uri=https%3A%2F%2Fdiscord.gg%2FU3u5EyrgTD&response_type=code&scope=bot%20guilds.join"
